src/test/fail/elif_without_if.ly
###
SyntaxError: 'elif' without 'if'.
Where: File "test/fail/elif_without_if.ly" at line 6
###

elif
